--- a/img-recog-backend/img-recog-client/package.json
+++ b/img-recog-backend/img-recog-client/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tensorflow/tfjs": "^3.12.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "react-tilt": "^0.1.4",
+    "react-scripts": "^5.0.0",
     "reactstrap": "^8.9.0",
     "tachyons": "^4.12.0",
     "web-vitals": "^0.2.4"
