--- a/img-recog-backend/img-recog-client/public/manifest.json
+++ b/img-recog-backend/img-recog-client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Object Detector",
+  "name": "Object Detector",
   "icons": [
     {
       "src": "favicon.ico",
