--- a/img-recog-backend/package.json
+++ b/img-recog-backend/package.json
@@ -18,6 +18,7 @@
     "knex": "^0.21.14",
     "morgan": "^1.10.0",
     "pg": "^8.5.1",
+    "pg-connection-string": "^2.5.0",
     "redis": "^3.1.2"
   },
   "devDependencies": {
